[package]                   # 🔹 Раздел с метаинформацией о пакете (проекте)
name = "guessing-game"      # 🏷️ Имя проекта (пакета) — используется при публикации на crates.io и как имя бинарного файла
version = "0.1.0"           # 🧩 Версия проекта в формате semver (Major.Minor.Patch)
                            # Полезно для контроля релизов и зависимостей (например, другой проект может зависеть от этой версии)
edition = "2024"            # 🧪 Версия стандарта Rust (языковые и синтаксические возможности)
                            # В Rust бывают разные "редакции" (edition), которые добавляют новые фичи, но остаются совместимыми

[dependencies]              # 📦 Здесь указываются внешние библиотеки (пакеты), которые проект использует
                            # Пример:
                            # rand = "0.8" — добавит генератор случайных чисел
